fix incorrect get club detail documentation
